# mind_lantern

./: .gitignore  0-data-collection.ipynb  1-document-indexing.ipynb  2-basic.ipynb  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
