[project]
name = "mind-lantern"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.23",
    "pydrive>=1.3.1",
    "yt-dlp>=2025.6.9",
]
