[project]
name = "mind-lantern"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "chromadb>=1.0.12",
    "dotenv>=0.9.9",
    "gradio>=5.34.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-google-genai>=2.1.5",
    "langchain-milvus>=0.2.0",
    "langchain-openai>=0.3.23",
    "pydrive>=1.3.1",
    "pymilvus>=2.5.11",
    "sentence-transformers>=4.1.0",
    "yt-dlp>=2025.6.9",
]
